force-app/main/default/objects/albiraSolutions__ContactChart__c/albiraSolutions__ContactChart__c.object-meta.xml
<CustomObject>
    <label>ContactChart</label>
    <nameField>
        <label>ContactChart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContactCharts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>