force-app/main/default/objects/albiraSolutions__ContactChart__c/fields/albiraSolutions__AccountChart__c.field-meta.xml
<CustomField>
    <fullName>albiraSolutions__AccountChart__c</fullName>
    <label>AccountChart</label>
    <referenceTo>albiraSolutions__AccountChart__c</referenceTo>
    <relationshipLabel>ContactCharts</relationshipLabel>
    <relationshipName>ContactCharts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>