force-app/main/default/objects/albiraSolutions__ContactChart__c/fields/albiraSolutions__AccountID__c.field-meta.xml
<CustomField>
    <fullName>albiraSolutions__AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ContactCharts</relationshipLabel>
    <relationshipName>ContactCharts</relationshipName>
    <type>Lookup</type>
</CustomField>