force-app/main/default/objects/albiraSolutions__ContactChart__c/fields/albiraSolutions__Contact__c.field-meta.xml
<CustomField>
    <fullName>albiraSolutions__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ContactCharts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>