force-app/main/default/objects/albiraSolutions__ContactChart__c/fields/albiraSolutions__CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>albiraSolutions__CreatedDate__c</fullName>
    <label>CreatedDate</label>
    <type>DateTime</type>
</CustomField>