force-app/main/default/objects/albiraSolutions__ContactChart__c/fields/ParentChartNameTrig__c.field-meta.xml
<CustomField>
    <fullName>ParentChartNameTrig__c</fullName>
    <description>Via a flow this field will be inserted at create / edit. This will be used in a duplicate check, because we can&apos;t use two id fields in a duplicate check.</description>
    <label>Parent Chart Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>