force-app/main/default/objects/albiraSolutions__ContactChart__c/listViews/albiraSolutions__All.listView-meta.xml
<ListView>
    <fullName>albiraSolutions__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>